--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
+* {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
 #myInput {
-    background-image: 'search.svg';
-    background-position: 10px 12px; /* Position the search icon */
-    background-repeat: no-repeat; /* Do not repeat the icon image */
-    width: 100%; /* Full-width */
+    width: auto; /* Full-width */
     font-size: 16px; /* Increase font-size */
-    padding: 12px 20px 12px 40px; /* Add some padding */
+    padding: 12px; /* Add some padding */
     border: 1px solid #ddd; /* Add a grey border */
     margin-bottom: 12px; /* Add some space below the input */
-  }
+}
+
+.button {
+    width: 100px; /* Full-width */
+    font-size: 16px; /* Increase font-size */
+    padding: 12px; /* Add some padding */
+    border: 1px solid #ddd; /* Add a grey border */
+    margin-bottom: 12px; /* Add some space below the input */
+}
   
 .sentence-list {
     /* Remove default list styling */
@@ -16,7 +26,7 @@
     margin: 0;
 }
   
-.sentence-list li a {
+.sentence-list li {
     border: 1px solid #ddd; /* Add a border to all links */
     margin-top: -1px; /* Prevent double borders */
     background-color: #f6f6f6; /* Grey background color */
@@ -25,8 +35,4 @@
     font-size: 18px; /* Increase the font-size */
     color: black; /* Add a black text color */
     display: block; /* Make it into a block element to fill the whole list */
-}
-  
-.sentence-list li a:hover:not(.header) {
-    background-color: #eee; /* Add a hover effect to all links, except for headers */
 }
