--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #myInput {
     width: auto; /* Full-width */
